--- a/export-inventory-source.yml
+++ b/export-inventory-source.yml
@@ -7,6 +7,10 @@
 
 
   tasks:
+    - name: install collections
+      ansible.builtin.command: ansible-galaxy collection install -r roles/requirements.yml
+      changed_when: true
+
     - name: Get inventory source info
       ansible.controller.export:
         controller_host: "{{ AAP_HOSTNAME }}"
