--- a/export-inventory-source.yml
+++ b/export-inventory-source.yml
@@ -7,14 +7,10 @@
 
 
   tasks:
-    - name: install collections
-      ansible.builtin.command: ansible-galaxy collection install -r roles/requirements.yml
-      changed_when: true
-
     - name: Get inventory source info
       ansible.controller.export:
-        controller_host: "{{ AAP_HOSTNAME }}"
-        controller_username: "{{ AAP_USERNAME }}"
-        controller_password: "{{ AAP_PASSWORD }}"
+        controller_host: "{{ aap_hostname }}"
+        controller_username: "{{ aap_username }}"
+        controller_password: "{{ aap_password }}"
         inventory_sources: ["gci"]
         validate_certs: "{{ validate_certs }}"
